Updating index page with app namE

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,9 @@
 		></div>
 
 		<div id="ui-panel">
-			<h1>RealMeasure</h1>
+			<h1>DiVR</h1>
 			<p>
-				Welcome to RealMeasure - the Mixed Reality tool that lets you take
-				real-life measurements using your controllers
+				Welcome to Do it VR - the Mixed Reality tool for DIY and crafts based on Meta's <a href="https://github.com/meta-quest/webxr-showcases/tree/main/realmeasure">RealMeasure</a> app
 			</p>
 			<button id="mr-button" class="action-button">Launch</button>
 			<button id="web-launch-button" class="action-button">Launch</button>
