Updating index page with app namE

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>RealMeasure</title>
+		<title>DiVR</title>
 	</head>
 	<body style="margin: 0">
 		<div
